Corrected issue with ecosystem site header - expanded space between nav dropdowns when in two columns, corrected placement of arrow on hover when line wraps (https://trello.com/c/B4wdTAOP/80-main-menu-dropdown)

--- a/src/components/site-header/site-header.config.json
+++ b/src/components/site-header/site-header.config.json
@@ -242,6 +242,34 @@
             "url": "https://www.iastate.edu/",
             "children": [
               {
+                "title": "Minim adipiscing, eu est adipiscing elit do minim.",
+                "url": "https://www.iastate.edu/"
+              },
+              {
+                "title": "Tempor nulla velit lorem, ullamco quis qui non. Lorem ullamco quis, qui non eiusmod ullamco anim. Qui non eiusmod ullamco",
+                "url": "https://www.iastate.edu/"
+              },
+              {
+                "title": "Principles of Community",
+                "url": "https://www.iastate.edu/"
+              },
+              {
+                "title": "Principles of Community",
+                "url": "https://www.iastate.edu/"
+              },
+              {
+                "title": "Principles of Community",
+                "url": "https://www.iastate.edu/"
+              },
+              {
+                "title": "Principles of Community",
+                "url": "https://www.iastate.edu/"
+              },
+              {
+                "title": "Principles of Community",
+                "url": "https://www.iastate.edu/"
+              },
+              {
                 "title": "Principles of Community",
                 "url": "https://www.iastate.edu/"
               }
