--- a/src/components/faculty-staff-card-set/faculty-staff-card-set.config.json
+++ b/src/components/faculty-staff-card-set/faculty-staff-card-set.config.json
@@ -8,7 +8,7 @@
         },
         "url": "#",
         "title": "Lorem ipsum",
-        "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet.",
+        "body": "Sample Title",
         "email": "test@test.com",
         "phone": "(444) 444-4444",
         "facts": [
@@ -37,7 +37,7 @@
         },
         "url": "#",
         "title": "Lorem ipsum",
-        "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet.",
+        "body": "Sample Title",
         "email": "test@test.com",
         "phone": "",
         "facts": [
@@ -58,7 +58,7 @@
         },
         "url": "#",
         "title": "Lorem ipsum",
-        "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet.",
+        "body": "Sample Title",
         "email": "",
         "phone": "(444) 444-4444",
         "facts": [
@@ -75,7 +75,7 @@
         },
         "url": "#",
         "title": "Lorem ipsum",
-        "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet.",
+        "body": "Sample Title",
         "email": "",
         "phone": "",
         "facts": [
