--- a/src/components/faculty-staff-feed-item/faculty-staff-feed-item.config.json
+++ b/src/components/faculty-staff-feed-item/faculty-staff-feed-item.config.json
@@ -6,7 +6,7 @@
     },
     "url": "#",
     "title": "Lorem ipsum",
-    "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet.",
+    "body": "Sample Title.",
     "email": "test@test.com",
     "phone": "(444) 444-4444",
     "facts": [
