--- a/src/components/pages/faculty-staff-directory-a-z-index.config.json
+++ b/src/components/pages/faculty-staff-directory-a-z-index.config.json
@@ -121,7 +121,7 @@
           },
           "url": "#",
           "title": "Lorem Ipsum",
-          "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet.",
+          "body": "Sample Title",
           "email": "test@test.com",
           "phone": "(444) 444-4444"
         },
@@ -132,7 +132,7 @@
           },
           "url": "#",
           "title": "Website Title Lorem Ipsum Even Longer Lorem Ipsum",
-          "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet.",
+          "body": "Sample Title",
           "email": "",
           "phone": "(444) 444-4444"
         },
@@ -143,7 +143,7 @@
           },
           "url": "#",
           "title": "Lorem Ipsum",
-          "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet.",
+          "body": "Sample Title",
           "email": "test@test.com",
           "phone": ""
         },
@@ -154,7 +154,7 @@
           },
           "url": "#",
           "title": "Website Title Lorem Ipsum Even Longer Lorem Ipsum",
-          "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet.",
+          "body": "Sample Title",
           "email": "",
           "phone": ""
         },
@@ -165,7 +165,7 @@
           },
           "url": "",
           "title": "Lorem Ipsum",
-          "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet.",
+          "body": "Sample Title",
           "email": "",
           "phone": ""
         }
