--- a/src/components/pages/faculty-staff-directory-combined-search.config.json
+++ b/src/components/pages/faculty-staff-directory-combined-search.config.json
@@ -121,7 +121,7 @@
           },
           "url": "#",
           "title": "Lorem Ipsum",
-          "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet.",
+          "body": "Sample Title",
           "email": "test@test.com",
           "phone": "(444) 444-4444",
           "facts": [
@@ -150,7 +150,7 @@
           },
           "url": "#",
           "title": "Website Title Lorem Ipsum Even Longer Lorem Ipsum",
-          "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet.",
+          "body": "Sample Title",
           "email": "",
           "phone": "(444) 444-4444",
           "facts": [
@@ -171,7 +171,7 @@
           },
           "url": "#",
           "title": "Lorem Ipsum",
-          "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet.",
+          "body": "Sample Title",
           "email": "test@test.com",
           "phone": "",
           "facts": [
@@ -188,7 +188,7 @@
           },
           "url": "#",
           "title": "Website Title Lorem Ipsum Even Longer Lorem Ipsum",
-          "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet.",
+          "body": "Sample Title",
           "email": "",
           "phone": "",
           "facts": [
@@ -213,7 +213,7 @@
           },
           "url": "",
           "title": "Lorem Ipsum",
-          "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet.",
+          "body": "Sample Title",
           "email": "",
           "phone": "",
           "facts": [
