--- a/src/components/pages/faculty-staff-faculty-cards.config.json
+++ b/src/components/pages/faculty-staff-faculty-cards.config.json
@@ -15,7 +15,7 @@
           },
           "url": "#",
           "title": "Lorem Ipsum",
-          "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet."
+          "body": "Sample Title."
         },
         {
           "image": {
@@ -24,7 +24,7 @@
           },
           "url": "#",
           "title": "Lorem Ipsum",
-          "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet."
+          "body": "Sample Title."
         },
         {
           "image": {
@@ -33,7 +33,7 @@
           },
           "url": "#",
           "title": "Lorem Ipsum",
-          "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet."
+          "body": "Sample Title."
         },
         {
           "image": {
@@ -42,7 +42,7 @@
           },
           "url": "#",
           "title": "Lorem Ipsum",
-          "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet."
+          "body": "Sample Title."
         },
         {
           "image": {
@@ -51,7 +51,7 @@
           },
           "url": "",
           "title": "Lorem Ipsum",
-          "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet."
+          "body": "Sample Title."
         }
       ]
     },
@@ -64,7 +64,7 @@
           },
           "url": "#",
           "title": "Lorem Ipsum",
-          "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet."
+          "body": "Sample Title."
         },
         {
           "image": {
@@ -73,7 +73,7 @@
           },
           "url": "#",
           "title": "Lorem Ipsum",
-          "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet."
+          "body": "Sample Title."
         },
         {
           "image": {
@@ -82,7 +82,7 @@
           },
           "url": "#",
           "title": "Lorem Ipsum",
-          "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet."
+          "body": "Sample Title."
         },
         {
           "image": {
@@ -91,7 +91,7 @@
           },
           "url": "#",
           "title": "Lorem Ipsum",
-          "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet."
+          "body": "Sample Title."
         },
         {
           "image": {
@@ -100,7 +100,7 @@
           },
           "url": "",
           "title": "Lorem Ipsum",
-          "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet."
+          "body": "Sample Title."
         }
       ]
     },
@@ -113,7 +113,7 @@
           },
           "url": "#",
           "title": "Lorem Ipsum",
-          "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet."
+          "body": "Sample Title."
         },
         {
           "image": {
@@ -122,7 +122,7 @@
           },
           "url": "#",
           "title": "Lorem Ipsum",
-          "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet."
+          "body": "Sample Title."
         },
         {
           "image": {
@@ -131,7 +131,7 @@
           },
           "url": "#",
           "title": "Lorem Ipsum",
-          "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet."
+          "body": "Sample Title."
         },
         {
           "image": {
@@ -140,7 +140,7 @@
           },
           "url": "#",
           "title": "Lorem Ipsum",
-          "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet."
+          "body": "Sample Title."
         },
         {
           "image": {
@@ -149,7 +149,7 @@
           },
           "url": "",
           "title": "Lorem Ipsum",
-          "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet."
+          "body": "Sample Title."
         }
       ]
     }
