--- a/src/components/pages/kitchen-sink.config.json
+++ b/src/components/pages/kitchen-sink.config.json
@@ -177,6 +177,25 @@
           "url": "https://iastate.edu",
           "text": "Tertiary Link Style",
           "variant": "link-tertiary"
+        },
+        {
+          "text": "Video Link Style",
+          "variant": "link-video",
+          "video": {
+            "text": "Link Lorem Ipsum Dolor",
+            "modal": {
+              "id": "Video-Modal-1",
+              "title": "Video Modal",
+              "content": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>",
+              "video": {
+                "wallpaper": "../../img/IMG-Inline_Center_FPO.jpg",
+                "source": "youtube",
+                "title": "Your future starts now.",
+                "youtube_video_id": "LjOmcZkXVcU",
+                "vimeo_video_id": ""
+              }
+            }
+          }
         }
       ]
     },
