Bugfix - Video Modals now pause when closed

--- a/src/components/feature-with-small-image/feature-with-small-image.config.json
+++ b/src/components/feature-with-small-image/feature-with-small-image.config.json
@@ -19,7 +19,7 @@
           {
             "text": "Video Dolor Ipsum",
             "modal": {
-              "id": "Video-Modal-1",
+              "id": "Video-Modal-FSMI-1",
               "title": "Video Modal",
               "content": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>",
               "video": {
@@ -34,7 +34,7 @@
           {
             "text": "Video Ipsum",
             "modal": {
-              "id": "Video-Modal-2",
+              "id": "Video-Modal-FSMI-2",
               "title": "Video Modal",
               "content": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>",
               "video": {
