Video Components Page Fix

--- a/src/components/blockquote/blockquote.config.json
+++ b/src/components/blockquote/blockquote.config.json
@@ -16,7 +16,7 @@
         "video": {
           "text": "Link Lorem Ipsum Dolor",
           "modal": {
-            "id": "Video-Modal-1",
+            "id": "Video-Modal-Blockquote-1",
             "title": "Video Modal",
             "content": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>",
             "video": {
