--- a/src/components/feature-with-large-image-and-intro/feature-with-large-image-and-intro.config.json
+++ b/src/components/feature-with-large-image-and-intro/feature-with-large-image-and-intro.config.json
@@ -33,7 +33,7 @@
                 "video": {
                   "text": "Video Dolor Ipsum",
                   "modal": {
-                    "id": "Video-Modal-1",
+                    "id": "Video-Modal-FLIntro-1",
                     "title": "Video Modal",
                     "content": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>",
                     "video": {
