--- a/src/components/pages/video-modal-components.config.json
+++ b/src/components/pages/video-modal-components.config.json
@@ -86,7 +86,7 @@
           "video": {
             "text": "Link Lorem Ipsum Dolor",
             "modal": {
-              "id": "Video-Modal-1",
+              "id": "Video-Modal-Card-1",
               "title": "Video Modal",
               "content": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>",
               "video": {
@@ -107,7 +107,7 @@
           "video": {
             "text": "Link Lorem Ipsum Dolor",
             "modal": {
-              "id": "Video-Modal-1",
+              "id": "Video-Modal-Card-2",
               "title": "Video Modal",
               "content": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>",
               "video": {
@@ -128,7 +128,7 @@
           "video": {
             "text": "Link Lorem Ipsum Dolor",
             "modal": {
-              "id": "Video-Modal-1",
+              "id": "Video-Modal-Card-3",
               "title": "Video Modal",
               "content": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>",
               "video": {
@@ -142,6 +142,33 @@
           }
         }
       ]
+    },
+    "feature_with_large_image": {
+      "image": "../../img/feature_with_large_image.jpg",
+      "title": "Feature with H2 and Large Image",
+      "text": "<p>Nemo <a href=\"#\">enim ipsam voluptatem quia</a> voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni lorem ipsem.</p>",
+      "button_set": {
+        "items": [
+          {
+            "text": "Primary CTA Style",
+            "video": {
+              "text": "Link Lorem Ipsum Dolor",
+              "modal": {
+                "id": "Video-Modal-FLI-1",
+                "title": "Video Modal",
+                "content": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>",
+                "video": {
+                  "wallpaper": "../../img/IMG-Inline_Center_FPO.jpg",
+                  "source": "youtube",
+                  "title": "Your future starts now.",
+                  "youtube_video_id": "LjOmcZkXVcU",
+                  "vimeo_video_id": ""
+                }
+              }
+            }
+          }
+        ]
+      }
     }
   }
 }
