--- a/src/components/feature-with-large-image-and-intro/feature-with-large-image-and-intro.config.json
+++ b/src/components/feature-with-large-image-and-intro/feature-with-large-image-and-intro.config.json
@@ -24,7 +24,7 @@
         "intro_text": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>",
         "feature_with_large_image": {
           "image": "../../img/Feature-Image-Inset-Large_FPO.jpg",
-          "title": "Inset Feature with H2 and Large Image",
+          "title": "Inset Feature with H2 and Large Image and intro",
           "text": "<p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni lorem ipsem.</p>",
           "button_set": {
             "items": [
