--- a/src/components/pages/image-gallery-set.config.json
+++ b/src/components/pages/image-gallery-set.config.json
@@ -13,11 +13,11 @@
           },
           {
             "url": "https://www.iastate.edu/",
-            "name": "Image Collages"
+            "name": "Image Gallery Set"
           }
         ]
       },
-      "title": "Image Collages"
+      "title": "Image Gallery Set"
     }
   }
 }
