--- a/src/components/hero/hero.config.json
+++ b/src/components/hero/hero.config.json
@@ -102,6 +102,7 @@
       "context": {
         "headline": "Under Pressure",
         "subhead": "How ISU researchers solved one of the 20th century’s biggest scientific mysteries and helped end WWII.",
+        "date": "June 16, 2022",
         "attribution": "<p><strong>Author: Firstname Lastname</strong> | Image: Firstname Lastname</p>",
         "image": {
           "src": "../../img/Article_Hero.jpg",
